force-app/main/default/objects/Feature_Flag__mdt/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <inlineHelpText>This is a unique, short string, used to identify a particular piece of functionality (eg, a Trigger function, a Process Builder, etc.)</inlineHelpText>
    <label>Code</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>