force-app/main/default/objects/Feature_Flag__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When TRUE, this feature is enabled for all users, unless otherwise opted OUT.  When FALSE, this feature is disabled for all users, unless otherwise opted IN.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>