force-app/main/default/objects/Feature_Flag__mdt/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <inlineHelpText>If this feature is tied to a specific object, enter that object&apos;s API name here.  This is used to turn off all features by object.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>