force-app/main/default/objects/Feature_Flag__mdt/fields/Settings__c.field-meta.xml
<CustomField>
    <fullName>Settings__c</fullName>
    <inlineHelpText>This is expected to be a JSON-formatted string, containing any other settings pertinent to this feature.</inlineHelpText>
    <label>Other Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>