force-app/main/default/objects/Feature_Flag__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Code__c</columns>
    <columns>Category__c</columns>
    <columns>Object__c</columns>
    <columns>Enabled__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>